Publish jar and instructions how to run